@@ -1,4 +1,4 @@
-const char jcc_rcs[] = "$Id: jcc.c,v 1.168 2008/03/02 12:25:25 fabiankeil Exp $";
+const char jcc_rcs[] = "$Id: jcc.c,v 1.169 2008/03/04 18:30:39 fabiankeil Exp $";
 /*********************************************************************
  *
  * File        :  $Source: /cvsroot/ijbswa/current/jcc.c,v $
@@ -33,6 +33,10 @@ const char jcc_rcs[] = "$Id: jcc.c,v 1.168 2008/03/02 12:25:25 fabiankeil Exp $"
  *
  * Revisions   :
  *    $Log: jcc.c,v $
+ *    Revision 1.169  2008/03/04 18:30:39  fabiankeil
+ *    Remove the treat-forbidden-connects-like-blocks action. We now
+ *    use the "blocked" page for forbidden CONNECT requests by default.
+ *
  *    Revision 1.168  2008/03/02 12:25:25  fabiankeil
  *    Also use shiny new connect_port_is_forbidden() in jcc.c.
  *
@@ -2192,9 +2196,8 @@ static void chat(struct client_state *csp)
    if (http->ssl && connect_port_is_forbidden(csp))
    {
       const char *acceptable_connect_ports =
-         csp->action->string[ACTION_STRING_LIMIT_CONNECT] ?
-         csp->action->string[ACTION_STRING_LIMIT_CONNECT] :
-         "443 (implied default)";
+         csp->action->string[ACTION_STRING_LIMIT_CONNECT];
+      assert(NULL != acceptable_connect_ports);
       log_error(LOG_LEVEL_INFO, "Request from %s marked for blocking. "
          "limit-connect{%s} doesn't allow CONNECT requests to port %d.",
          csp->ip_addr_str, acceptable_connect_ports, csp->http->port);
